--- a/style.css
+++ b/style.css
@@ -1,11 +1,23 @@
-
 body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 0;
 }
+
 #gl-canvas {
     display: block;
+}
+
+.menu {
+    height: 82.5%;
+    width: 25%;
+    border-left: 1px solid black;
+}
+
+.menu-div {
+    margin-left: 20px;
+    border-top: 2px solid rgb(215, 214, 214);
+    width: 100%;
+    height: 100%;
 }
